--- a/systemd/cscreen.service
+++ b/systemd/cscreen.service
@@ -4,8 +4,9 @@ After=network.target autofs.service
 
 [Service]
 Type=forking 
+Environment=SCREEN_HISTORY="20000"
 EnvironmentFile=-/etc/sysconfig/cscreen
-ExecStart=/usr/bin/screen -d -m -S $SCREEN_NAME -c $SCREENRC
+ExecStart=/usr/bin/screen -h $SCREEN_HISTORY -d -m -S $SCREEN_NAME -c $SCREENRC
 ExecReload=/bin/kill -HUP $MAINPID
 # This can be adjusted via "drop-in" directory cscreen.service.d/ (see systemd.unit(5))
 User=_cscreen
