use SCREENRC variable consistently
SCREENRC becomes an optional sysconfig setting.

Signed-off-by: Olaf Hering <olaf@aepfle.de>

--- a/systemd/cscreen.service
+++ b/systemd/cscreen.service
@@ -4,6 +4,7 @@ After=network.target autofs.service
 
 [Service]
 Type=forking 
+Environment=SCREENRC='/etc/cscreenrc'
 Environment=SCREEN_NAME='console'
 Environment=SCREEN_HISTORY="20000"
 EnvironmentFile=-/etc/sysconfig/cscreen
