--- a/systemd/cscreen.service
+++ b/systemd/cscreen.service
@@ -13,6 +13,8 @@ ExecReload=/bin/kill -HUP $MAINPID
 # This can be adjusted via "drop-in" directory cscreen.service.d/ (see systemd.unit(5))
 User=_cscreen
 Group=_cscreen
+# This can be adjusted via "drop-in" directory cscreen.service.d/ (see systemd.exec(5))
+LimitNOFILE=2048
 
 [Install]
 WantedBy=multi-user.target
