provide a config example
The file must be adjusted anyway, it will always be dirty.

Signed-off-by: Olaf Hering <olaf@aepfle.de>

--- a/configs/cscreen.config
+++ b/configs/cscreen.config
@@ -39,3 +39,9 @@ log on
 ## automatically reconnect to remote hosts
 zombie_timeout 11
 ##
+#
+# defhstatus "ThisHost ttyS0"
+# screen -t OtherHost /dev/ttyS0 115200
+# defhstatus "RemoteHOST IPMI"
+# screen -t RemoteHost -L ipmitool -I lanplus -H remotehost -U username -P password sol activate
+#
