use wrapper script for shell/SHELL
Since commit 0878117f5899c05c3d4178dd28f1bf320a9c2758 ("Pass more
characters to the remote system (bsc#1162835)") the terminal settings
in a shell launched by screen lack essential settings, such as CTRL-c
does not work anymore.

Address this breakage with a wrapper script, which restores sane tty
settings and finally launch a shell.

Signed-off-by: Olaf Hering <olaf@aepfle.de>

--- a/systemd/cscreen.service
+++ b/systemd/cscreen.service
@@ -7,8 +7,9 @@ Type=forking
 Environment=SCREENRC='/etc/cscreenrc'
 Environment=SCREEN_NAME='console'
 Environment=SCREEN_HISTORY="20000"
+Environmane=SCREEN_SHELL='/usr/share/cscreen/cscreen-shell'
 EnvironmentFile=-/etc/sysconfig/cscreen
-ExecStart=/usr/bin/screen -h $SCREEN_HISTORY -d -m -S $SCREEN_NAME -c $SCREENRC
+ExecStart=/usr/bin/screen -h $SCREEN_HISTORY -s $SCREEN_SHELL -d -m -S $SCREEN_NAME -c $SCREENRC
 ExecReload=/bin/kill -HUP $MAINPID
 # This can be adjusted via "drop-in" directory cscreen.service.d/ (see systemd.unit(5))
 User=_cscreen
