set hard status in cscreenrc example
Without such knob, newly launched shells will use the string from the
last defhstatus.

Signed-off-by: Olaf Hering <olaf@aepfle.de>

--- a/configs/cscreen.config
+++ b/configs/cscreen.config
@@ -43,4 +43,5 @@ zombie_timeout 11
 # screen -t OtherHost /dev/ttyS0 115200
 # defhstatus "RemoteHOST IPMI"
 # screen -t RemoteHost -L ipmitool -I lanplus -H remotehost -U username -P password sol activate
+# defhstatus "ThisHost cscreen shell"
 #
