Fix default logtstamp string
Use proper YYYY-MM-DD instead of weird MM/DD/YY.

Signed-off-by: Olaf Hering <olaf@aepfle.de>

--- a/configs/cscreen.config
+++ b/configs/cscreen.config
@@ -26,6 +26,7 @@ bind B break 3
 # where the logfiles go: 
 logfile /var/log/screen/screenlog.%t.log
 logtstamp on 
+logtstamp string "-- %n:%t -- time-stamp -- %Y-%m-%d %c:%s --\n"
 deflog on
 # statusline
 caption always "%3n %t%? @%u%?%? [%h]%?"
