add example for virsh console (bsc#1213936)
Signed-off-by: Olaf Hering <olaf@aepfle.de>

--- a/configs/cscreen.config
+++ b/configs/cscreen.config
@@ -44,5 +44,7 @@ zombie_timeout 11
 # screen -t OtherHost /dev/ttyS0 115200
 # defhstatus "RemoteHOST IPMI"
 # screen -t RemoteHost -L ipmitool -I lanplus -H remotehost -U username -P password sol activate
+# defhstatus "KVM VM"
+# screen -t VM -L virsh -c 'qemu:///system' console vm
 # defhstatus "ThisHost cscreen shell"
 #
