--- a/systemd/cscreen.service
+++ b/systemd/cscreen.service
@@ -12,8 +12,8 @@ EnvironmentFile=-/etc/sysconfig/cscreen
 ExecStart=/usr/bin/screen -h $SCREEN_HISTORY -s $SCREEN_SHELL -d -m -S $SCREEN_NAME -c $SCREENRC
 ExecReload=/bin/kill -HUP $MAINPID
 # This can be adjusted via "drop-in" directory cscreen.service.d/ (see systemd.unit(5))
-User=_cscreen
-Group=_cscreen
+User=cscreen
+Group=cscreen
 # This can be adjusted via "drop-in" directory cscreen.service.d/ (see systemd.exec(5))
 LimitNOFILE=2048
 
