disable C-c, which creates a new window with a shell
In the context of cscreen, users would be able to create a shell
with the privileges of the _cscreen user. This might just happen
by accident with incorrect key strokes.

This also disables the "-s /executable" command line option.

Signed-off-by: Olaf Hering <olaf@aepfle.de>

--- a/configs/cscreen.config
+++ b/configs/cscreen.config
@@ -7,6 +7,9 @@ startup_message off
 
 # xterm has no hardstatus
 termcapinfo xterm hs@
+# disable C-c, which creates a new window with a shell
+bind c
+bind ^c
 # we kill windows with SHIFT-K
 bind k
 bind ^k
