disable C-:, which is the screen command mode
The command mode allows to tweak settings of a running screen process.
In case configuration tweaks are required, they need to go into the
configuration file.

Signed-off-by: Olaf Hering <olaf@aepfle.de>

--- a/configs/cscreen.config
+++ b/configs/cscreen.config
@@ -10,6 +10,8 @@ termcapinfo xterm hs@
 # disable C-c, which creates a new window with a shell
 bind c
 bind ^c
+# disable C-:, which is the screen command mode
+bind :
 # we kill windows with SHIFT-K
 bind k
 bind ^k
