--- a/cscreen.service
+++ b/cscreen.service
@@ -18,6 +18,8 @@ Group=_cscreen
 # This can be adjusted via "drop-in" directory cscreen.service.d/ (see systemd.exec(5))
 # screen uses select(2), which is limited to FD_SETSIZE open file descriptors
 LimitNOFILE=1024
+# This can be adjusted via "drop-in" directory cscreen.service.d/ (see systemd.exec(5))
+Nice=3
 
 [Install]
 WantedBy=multi-user.target
